Fixed menu visibility on iphone5

--- a/_scss/layout/_blog.scss
+++ b/_scss/layout/_blog.scss
@@ -219,6 +219,7 @@ section.blog-section {
         table {
           border: 1px solid black;
           margin: 1em 0em;
+          width: max-content;
         }
 
         td, th {
